Bug 117311 - The CUA bindings for clipboard (Copy-Paste) actions do not function in edit shell of Comment objects for Writer
Summary: The CUA bindings for clipboard (Copy-Paste) actions do not function in edit ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.3.2 release
Hardware: All All
: medium minor
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:6.1.0 target:6.0.5
Keywords:
Depends on:
Blocks: Apple, because, Libre, of, Office, opening, problem, Writer-Comments
  Show dependency treegraph
 
Reported: 2018-04-28 10:23 UTC by Erkki Laaneoks
Modified: 2018-04-29 20:32 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Erkki Laaneoks 2018-04-28 10:23:35 UTC
Description:
When I want to copy a text from Writer comment and use CTRL+Ins keys then text is not copied.

On Calc CTRL+Ins and SHIFT+Ins work fine.

Default Shortcut keys don't specify CTRL+Ins and SHIFT+Ins (from menu: Tools => Customize => Keyboard).

Steps to Reproduce:
1. Add a comment in Writer and write something.
2. Select some text
3. Press CTRL + Ins
4. Paste "copied" text to somewhere

Actual Results:  
text is not copied 

Expected Results:
Copied text to buffer


Reproducible: Always


User Profile Reset: No



Additional Info:
Add default keymap for CTRL+Ins and SHIFT+Ins (for copy and paste)


User-Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:59.0) Gecko/20100101 Firefox/59.0
Comment 1 Jacques Guilleron 2018-04-28 14:33:17 UTC
Hi Erkki,

I don't reproduce with
LO 5.4.3.2 Build ID: 92a7159f7e4af62137622921e809f8546db437e5
Threads CPU : 2; OS : Windows 6.1; UI Render : par défaut; 
Locale : fr-FR (fr_FR); Calc: CL
where these shortcuts work.
Confirmed usage by searching this in Wikipedia:
https://en.wikipedia.org/wiki/Insert_key
However, Ctrl+C and Ctrl+V are the usual shortcuts to copy and paste into LibreOffice.
But nothing prevents you from adding these shortcuts, since these combinations are free.
Comment 2 V Stuart Foote 2018-04-29 02:46:07 UTC
Confirmed.

Checking Tools -> Customize -> Keyboard for the LibreOffice radio button with default user profile shows the "IBM Common User Access (CUA)" Ctrl+Insert and Shift+Insert are assigned the same Copy & Paste functions as the Ctrl+C Ctrl+V norms. The Shift+Del is assigned as Cut along with its norm Ctrl+X.

Watching with a Clipboard viewer (Inside Clipboard NIRSOFT, or FreeClipboardViewer) they all function on Writer document canvas, but none function manipulating text in Writer's Comment object pop-ups.

The alternate CUA shortcuts do work correctly from Calc's Comment objects.

On Windows 10 Home 64-bit en-US with
Version: 6.1.0.0.alpha1+ (x64)
Build ID: a6a38c6de9c18fd1269fc8cfc0e070ef429c8e2f
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-04-28_01:58:12
Locale: en-US (en_US); Calc: CL
Comment 3 Commit Notification 2018-04-29 10:05:07 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4f0598ebe9b65c8cdfcb59645d552e3e4d11fe03

tdf#117311 Ctrl/Shift+Insert do not work in Writer comments

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Maxim Monastirsky 2018-04-29 10:23:18 UTC
backport to 6-0 is in gerrit.
Comment 5 V Stuart Foote 2018-04-29 14:10:50 UTC
@Maxim, checking further and the CUA Shift+Delete always did work against Comments--so think you've got exactly the right spot.
Comment 6 Commit Notification 2018-04-29 20:32:25 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=09fa7200d41403e8687dc639dfe74299da808d2b&h=libreoffice-6-0

tdf#117311 Ctrl/Shift+Insert do not work in Writer comments

It will be available in 6.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.