tdf#117311 Ctrl/Shift+Insert do not work in Writer comments

Change-Id: Ide4f3c57f67107995a90dff965a53324c052f715
Reviewed-on: https://gerrit.libreoffice.org/53619
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>
(cherry picked from commit 4f0598ebe9b65c8cdfcb59645d552e3e4d11fe03)
Reviewed-on: https://gerrit.libreoffice.org/53621
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>